[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "A package with many algorithms"
authors = ["Javier Ferreira <javier@jzferreira.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "^19.10b0"
mypy = "^0.782"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
